# boxs_tool

./: .gitignore  CMakeLists.txt  崩溃修复说明.md  编译修复说明.md
algorithm_registry/: CMakeLists.txt  algorithm_registry.cpp  algorithm_registry.h
downsample/: CMakeLists.txt
downsample/include/: downsample.h
downsample/src/: downsample.cpp
include/: AlgorithmFactory.h  AlgorithmManager.h  AlgorithmRegistry.h  BoundingBox.h  CustomInteractorStyle.h  IAlgorithm.h  MainWindow.h  PCLViewerWidget.h  algorithm_base.h  algorithm_manager.h  boxWidget.h  boxWindow.h  box_params.h  box_storage.h  euclideanCluster.h  points_in_boxes.h  setting_menu.h
src/: BoundingBox.cpp  CustomInteractorStyle.cpp  MainWindow.cpp  PCLViewerWidget.cpp  algorithm_manager.cpp  boxWidget.cpp  boxWindow.cpp  box_storage.cpp  main.cpp  points_in_boxes.cpp  setting_menu.cpp  setting_menu.ui
